2015-06-10  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y (yybadtoken): Print unexpected character
	literally rather than as a Lisp character literal.

2015-06-08  Kaz Kylheku  <kaz@kylheku.com>

	Code simplification.

	* txr.c (txr_main): Replacing two code blocks with single
	call to existing open_txr_file function.

2015-06-07  Kaz Kylheku  <kaz@kylheku.com>

	Critical bugfix for weak hashes.

	* hash.c (hash_mark): Hash tables which have both weak keys
	and values were not added to the reachable_weak_hashes list,
	and thus not subject to complete hash processing, leading
	to corruption.

2015-06-07  Kaz Kylheku  <kaz@kylheku.com>

	* lib.h (mkloc): Rename misleading argument from fun to obj.

2015-06-07  Kaz Kylheku  <kaz@kylheku.com>

	* parser.c (stream_parser_hash): New static variable.
	(parser_mark): Mark parser and primer members.
	(parser, ensure_parser): new argument: primer.
	(get_parser_impl, ensure_parser): New static
	functions.
	(prime_parser): New function.
	(lisp_parse): Multiple calls to this function on the same stream
	now logically continue the parse, not resetting the line
	number to 1.
	(parse_init): Initialize and gc-protect stream_parser_hash.

	* parser.h (parser_t): New members, primer and parser.
	(prime_parser): Declared.
	(parser): Declaration updated.

	* parser.y (parse): Now responsible for calling prime_parser.

2015-06-07  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (v_load): Call parse_once rater than parse.

	* parser.c (regex_parse, lisp_parse): Likewise.

	* txr.c (txr_main): Likewise.

	* parser.h (parse): Declaration updated.
	(parse_once): Declared.

	* parser.y (parse_once): New function, same as old parse implementation.
	(parse): Becomes one argument function which works with a previously
	initialized parser and continues the parse.

2015-06-07  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (catenated_stream_p, catenated_stream_push): New functions.
	(stream_init): Registered new functions as intrinsics.
